--- a/index.html
+++ b/index.html
@@ -40,26 +40,29 @@
 
     <ul class="log-list flex">
       <li>Login</li>
-      <li class="out-line">Register</li>
+      <li class="out-line-button">Register</li>
     </ul>
   </nav>
 
-  <div class="main">
-    <h1 class="title">
-      Make remote work
-    </h1>
+  <div class="main flex">
+    <div>
+      <h1 class="title">
+        Make remote work
+      </h1>
 
-    <p class="tag-line">
-      Get your team in sync, no matter your location. Streamline processes,
-      create team rituals, and watch productivity soar.
-    </p>
+      <p class="tag-line">
+        Get your team in sync, no matter your location. Streamline processes,
+        create team rituals, and watch productivity soar.
+      </p>
 
 
-    <button>
-      Learn more
-    </button>
+      <button class="filled-button">
+        Learn more
+      </button>
 
-    <img src="images/image-hero-desktop.png" alt="">
+    </div>
+
+    <img src="images/image-hero-desktop.png" alt="" class="hero-image">
   </div>
 
   <div class="attribution">
