--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </nav>
 
   <div class="main flex">
-    <div>
+    <div class="flex hero-text">
       <h1 class="title">
         Make remote work
       </h1>
@@ -59,6 +59,12 @@
       <button class="filled-button">
         Learn more
       </button>
+      <div class="companies flex">
+        <img src="images/client-databiz.svg" alt="">
+        <img src="images/client-audiophile.svg" alt="">
+        <img src="images/client-meet.svg" alt="">
+        <img src="images/client-maker.svg" alt="">      
+      </div>
 
     </div>
 
