--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
       <img src="images/logo.svg" alt="" class="logo">
 
       <ul class="nav-list flex">
-        <li class="flex expand">Features <img src="images/icon-arrow-down.svg" alt="" class="arrow-down"></li>
+        <li class="dropdown flex">
+          <div class="flex expand"> Features <img src="images/icon-arrow-down.svg" alt="" class="arrow-down"></div>
+          <ul class="dropdown-content flex">
+            <li>Todo List</li>
+            <li>Calender</li>
+            <li>Reminders</li>
+            <li>Planning</li>
+          </ul>
+        </li>
         <li class="flex expand">Company <img src="images/icon-arrow-down.svg" alt="" class="arrow-down"></li>
         <li>Careers</li>
         <li>About</li>
@@ -63,7 +71,7 @@
         <img src="images/client-databiz.svg" alt="">
         <img src="images/client-audiophile.svg" alt="">
         <img src="images/client-meet.svg" alt="">
-        <img src="images/client-maker.svg" alt="">      
+        <img src="images/client-maker.svg" alt="">
       </div>
 
     </div>
