--- a/index.html
+++ b/index.html
@@ -32,15 +32,25 @@
 
       <ul class="nav-list flex">
         <li class="dropdown flex">
-          <div class="flex expand"> Features <img src="images/icon-arrow-down.svg" alt="" class="arrow-down"></div>
+          <div class="flex gap10"> Features <img src="images/icon-arrow-down.svg" alt="" class="arrow-down"></div>
           <ul class="dropdown-content flex">
-            <li>Todo List</li>
-            <li>Calender</li>
-            <li>Reminders</li>
-            <li>Planning</li>
+            <li class="flex gap10"><img src="images/icon-todo.svg" alt="">Todo List</li>
+            <li class="flex gap10"><img src="images/icon-calendar.svg" alt="">Calender</li>
+            <li class="flex gap10"><img src="images/icon-reminders.svg" alt="">Reminders</li>
+            <li class="flex gap10"><img src="images/icon-planning.svg" alt="">Planning</li>
           </ul>
         </li>
-        <li class="flex expand">Company <img src="images/icon-arrow-down.svg" alt="" class="arrow-down"></li>
+        <li class="dropdown flex">
+          <div class="flex gap10">
+            Company
+            <img src="images/icon-arrow-down.svg" alt="" class="arrow-down">
+          </div>
+          <ul class="dropdown-content">
+            <li>History</li>
+            <li>Our Team</li>
+            <li>Blog</li>
+          </ul>
+        </li>
         <li>Careers</li>
         <li>About</li>
       </ul>
